@@ -2214,6 +2214,10 @@ static void PerspAxis(double *x, double *y, double *z,
     double axp[3];
     int nint, i;
     SEXP at, lab;
+    double cexsave = Rf_gpptr(dd)->cex;
+    int fontsave = Rf_gpptr(dd)->font;
+
+
     switch (axisType) {
     case 0:
 	min = x[0];	max = x[1];	range = x;	break;
@@ -2308,10 +2312,16 @@ static void PerspAxis(double *x, double *y, double *z,
     TransVector(u2, VT, v2);
     TransVector(u3, VT, v3);
     /* Draw axis label */
+    /* change in 2.5.0 to use cex.lab and font.lab */
+    Rf_gpptr(dd)->cex = Rf_gpptr(dd)->cexbase * Rf_gpptr(dd)->cexlab;
+    Rf_gpptr(dd)->font = Rf_gpptr(dd)->fontlab;
     GText(v3[0]/v3[3], v3[1]/v3[3], USER, label, .5, .5,
 	  labelAngle(v1[0]/v1[3], v1[1]/v1[3], v2[0]/v2[3], v2[1]/v2[3]),
 	  dd);
     /* Draw axis ticks */
+    /* change in 2.5.0 to use cex.axis and font.axis */
+    Rf_gpptr(dd)->cex = Rf_gpptr(dd)->cexbase * Rf_gpptr(dd)->cexaxis;
+    Rf_gpptr(dd)->font = Rf_gpptr(dd)->fontaxis;
     switch (tickType) {
     case 1: /* "simple": just an arrow parallel to axis, indicating direction
 	       of increase */
@@ -2365,6 +2375,8 @@ static void PerspAxis(double *x, double *y, double *z,
 	UNPROTECT(2);
 	break;
     }
+    Rf_gpptr(dd)->cex = cexsave;
+    Rf_gpptr(dd)->font = fontsave;
 }
 
 /* Determine the transformed (x, y) coordinates (in USER space)
